providers, stdlib, cc deps
* fix cc dep handling for archives and executables
* fix deps typing: providers StdlibLibMarker, StdLibMarker
* remove test_archive, use test_library instead
* add cfg vv_test_in_transition to test_module, to match test_executable
* remove _stdlib attr from executables, test_signature
* add ocamlrun attr to executables (?)
* add stdlib flag to DepsAggregator (remove this?)
* global var: MACOS_CC_UDEBUG_HACK
* visibility fixes
* fixes to test/rules/test_executable.sh

--- a/otherlibs/dynlink/BUILD.bazel
+++ b/otherlibs/dynlink/BUILD.bazel
@@ -49,6 +49,7 @@ SIG_OPTS    = []
 
 compiler_library(
     name = "dynlink",
+    cmxa_eligible = True,
     manifest  = [
         ":Dynlink",             # selected, byte or native
         ":Dynlink_common",
@@ -58,7 +59,10 @@ compiler_library(
         ":pack_dynlink":  [":compilerlibs_packed"],
         "//conditions:default"   :  [":compilerlibs"],
     }),
-    visibility = ["//debugger:__pkg__"]
+    visibility = [
+        "//debugger:__pkg__",
+        "//testsuite/tests:__subpackages__"
+    ]
 )
 
 
@@ -68,7 +72,6 @@ compiler_library(
 #   typing/outcometree.mli \
 #   file_formats/cmo_format.mli \
 #   file_formats/cmxs_format.mli
-
 
 
 config_setting(
@@ -96,7 +99,11 @@ compiler_module(
     }),
     sig    = "Dynlink_cmi",
     opts = MODULE_OPTS,
-    sig_deps = ["Dynlink_compilerlibs.Cmo_format_cmi"],
+    sig_deps = [
+        "Dynlink_compilerlibs.Cmo_format_cmi",
+        ## if emitter == sys
+        ":Dynlink_compilerlibs.Cmxs_format_cmi",
+    ],
     deps   = [
         ":Dynlink_compilerlibs.Config",
         ":Dynlink_common",
@@ -130,7 +137,7 @@ compiler_module(
         # "//platform/constraints/ocaml/emitter:sys_emitter?": [
         "//config/target/executor:sys_executor?": [
         # "//toolchain/target/executor:sys_executor?": [
-            # ":Dynlink_compilerlibs.Cmxs_format_cmi",
+            ":Dynlink_compilerlibs.Cmxs_format_cmi",
             # "//stdlib:Stdlib.Filename",
         ]
     # }) + select({
